# chttp

./: .gitignore  CMakeLists.txt  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  main.c
.github/workflows/: build-test.yml
cmake/: FindCriterion.cmake
include/: parse_req.h
src/: CMakeLists.txt  main.c  parse_req.c
test/: CMakeLists.txt  example.spec.c  get.fixture.txt  parse_test.c
